--- a/src/keenanpayne/layout/_site-header.scss
+++ b/src/keenanpayne/layout/_site-header.scss
@@ -3,7 +3,7 @@
 // ==================================================
 
 .siteHeader {
-  margin-top: 2rem;
+  margin-top: $spacing-s;
   width: 100%;
 
   @media (--medium-max) {
